--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="meTextColor">#0080FF</color>
+    <color name="meDivider">#D0D0D0</color>
+    <color name="meItemTextColor">#8E8E8E</color>
 </resources>
